ingress/reposilite-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: reposilite-ingress
  namespace: reposilite
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`repo.towerdefence.cc`) # Replace the domain you wish to use.
      kind: Rule
      services:
        - name: reposilite
          port: http
  tls:
    certResolver: resolver
    domains:
      - main: "repo.towerdefence.cc"
